k8s-orderflow/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orderflow
  labels:
    app.kubernetes.io/name: orderflow
    app.kubernetes.io/part-of: orderflow-system
